--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
     "redux-thunk": "^2.3.0",
     "rxjs": "^6.6.3"
   },
